# aws-mlflow-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml  template.py
.github/workflows/: main.yaml
config/: config.yaml
notebooks/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb
src/aws_mlflow_mlops/: __init__.py
src/aws_mlflow_mlops/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/aws_mlflow_mlops/config/: configuration.py
src/aws_mlflow_mlops/entity/: config_entity.py
src/aws_mlflow_mlops/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/aws_mlflow_mlops/utils/: common.py
static/css/: styles.css
templates/: index.html  results.html
